--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<nav>
 	  <ul class="navigation">
 		<li><a href="#myworks">My Works</a></li>
-		<li><a href="SnehaSakhare_UpdatedResume2 compressed.pdf" target="_blank">CV/Resume</a></li>
+		<li><a href="Resume Final pdf.pdf" target="_blank">CV/Resume</a></li>
 		<li><a href="https://www.behance.net/snehasakhare1" target="_blank">Behance</a></li>
 		<li><a href="https://www.linkedin.com/in/sneha-sakhare-3454b8222/" target="_blank">Linkedin</a></li>
 		  <li><a href="#contactme">Contact Me</a></li>
